# coco-reference

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
config/: default.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MIGRATION.md  PERMISSIONS.md  SECURITY.md  WORKSHOP_PREREQS.md  WORKSHOP_SCRIPT.md
docs/cost-attribution/: COST_BASELINE.md  DASHBOARD.md  README.md  coco_cost_attribution.lvdash.json  policy.md  warehouse_setup.sql
docs/cost-attribution/queries/: coco_daily_trend.sql  coco_spend_by_service.sql  coco_spend_by_user.sql  coco_spend_spikes.sql  coco_top_line_items.sql  coco_top_sql_queries.sql  coco_total_spend.sql  cost_per_user.sql  cost_spikes.sql  dbu_by_workload.sql  dbu_timeseries.sql  serving_endpoint_cost.sql  top_cost_queries.sql  warehouse_utilization.sql
docs/design/: apps-mosaic-ai-agent-reference.md  evaluation-architecture.md
docs/design/diagrams/: README.md  _generate_apps_mosaic_ai_reference.py  _generate_eval_architecture.py  _generate_mlflow_trace_structure.py  (+5 more)
docs/examples/: README.md  databricks_hosted_claude_for_dspy.py
evaluation/: scenarios.yaml
notebooks/: 00_setup_workspace.py  02_evaluate.py  03_optimize_dspy.py  99_teardown.py
scripts/: preflight_check.py  test_step7_deploy_agent.py
src/coco/: __init__.py  config.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_app_routes.py  test_responses_agent.py  test_session_persistence.py
tests/unit/: __init__.py  test_config.py  test_data_generator.py  test_gateway_client.py  test_guardrails.py  test_signatures.py  test_sql_statement_client.py  test_tools.py
(+65 files in other folders)
